--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
         "Mathics3",
         "Mathics3-Module-Base",
         "mathics-pygments",
-        "trepan3k>=1.3.1",
+        "trepan3k>=1.4.0",
 ]
 requires-python = ">=3.9"
 readme = "README.rst"
@@ -54,6 +54,7 @@ Downloads = "https://github.com/Mathics3/Mathics3-trepan/releases"
 
 [project.optional-dependencies]
 dev = [
+    "pre-commit",
     "pytest",
 ]
 
