--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /.hypothesis
 /.python-version
 /ChangeLog
+/ChangeLog-spell-corrected
 /Mathics3_debugger.egg-info
 /Mathics3_graph.egg-info
 /Mathics3_trepan.egg-info
