--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ requires = [
   "mathics-pygments",
   "trepan3k >= 1.4.0",
   "Mathics3-Module-Base",
-  "Mathics_Scanner >= 2.0.0"
-  "Mathics3 >= 9.0.0'
+  "Mathics_Scanner >= 2.0.0",
+  "Mathics3 >= 9.0.0",
 ]
 build-backend = "setuptools.build_meta"
 
